--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,13 @@
         tools:targetApi="31">
         <activity
             android:name=".SubmitAssign"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Tugas"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".Kursus"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
